fixed css whitespace on end of page

--- a/src/Styles/Nav.scss
+++ b/src/Styles/Nav.scss
@@ -2,8 +2,8 @@
   display: flex;
   border: solid;
   border-color: black;
-  width: 100vw;
   height: 7.5em;
+  width: 100%;
   background-color: #e60000;
   color: #FFCC00;
   align-items: center;
